# movie_reservation

./: .flake8  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  aliases-devcontainer  devcontainer-start.sh  devcontainer.env.example  devcontainer.json  docker-compose.yaml
.github/: pull_request_template.md
.github/workflows/: tests-and-lint-flow.yml
scripts/: exec.sh  format.sh  makemigrations.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 0810643b7dcd_remove_name_from_user.py  7b5c564650fa_initial_migration.py  cb73e5e29334_remove_session_table.py  d5a1c817c80b_change_field_to_json.py
src/api/v1/: admin_tools.py  router.py
src/api/v1/routers/: auth.py  movie.py
src/api/v1/schemas/: auth.py
src/controllers/: auth.py  movie.py  showtime.py
src/core/: auth.py  config.py  container.py  crypto.py  database.py  exceptions.py
src/models/: __init__.py  movie.py  reservation.py  seat.py  showtime.py  user.py
src/repositories/: movie.py  showtime.py  user.py
tests/controllers/: test_movie.py
tests/repository/: test_integration_showtime.py  test_showtime.py
